<resources>
    <string name="app_name">Murica_for_dummies</string>

    <string name="MassMetricResult">Result : %1$.3f kg</string>
    <string name="login_welcome">\'Murica for Dummies\nPlease sign in</string>
    <string name="username">Username</string>
    <string name="Password">password</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="VolumeMetricResult">Result : %1$.3f L</string>
    <string name="DistanceMetricResult">Result : %1$.3f m</string>
    <string name="MassOunceResult">Result : %1$.3f Ounce</string>
    <string name="MassPoundResult">Result : %1$.3f Pound</string>
    <string name="MassTonResult">Result : %1$.3f Ton</string>
    <string name="VolumeGillResult">Result : %1$.3f Gill</string>
    <string name="VolumePintResult">Result : %1$.3f Pint</string>
    <string name="VolumeGallonResult">Result : %1$.3f Gallon</string>
    <string name="DistanceInchResult">Result : %1$.3f Inch</string>
    <string name="DistanceFeetResult">Result : %1$.3f Feet</string>
    <string name="DistanceMileResult">Result : %1$.3f Mile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create your Account</string>
    <string name="create_account">MURICA FOR DUMMIES\nCreate your Account</string>
    <string name="create_accountButton">Create Account</string>
    <string name="create_accountSwapPageButton">Create Account</string>
    <string name="delete_username">Delete Username</string>
    <string name="username_to_delete">Username To Delete</string>
    <string name="create_user">Create User</string>
    <string name="create_admin">Create Admin</string>
</resources>