<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPageActivity">


    <TextView
        android:id="@+id/titleCreateAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:layout_margin="4dip"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="Admin Page"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCreateAccountTextView"
        android:autofillHints="Please enter Username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText"
        android:autofillHints="Please enter Password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/confirmPasswordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginEditText"
        android:autofillHints="Please enter Password"
        android:textSize="24sp" />

    <Button
        android:id="@+id/createAdminButton"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:text="@string/create_admin"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLoginEditText" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_user"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLoginEditText" />

    <EditText
        android:id="@+id/UsernameDelete"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:hint="@string/username_to_delete"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createUserButton"
        android:autofillHints="Please enter Password"
        android:textSize="24sp" />

    <Button
        android:id="@+id/deleteUsername"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete_username"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>